--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
+    <title>Frontend Mentor | Rock, Paper, Scissors</title>
     <link
       rel="icon"
       type="image/png"
@@ -12,27 +12,37 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | Rock, Paper, Scissors</title>
-
-    Score Rules You Picked The House Picked You Win You Lose Play Again
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link href="./styles/main.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">DawidPiecha</a>.
-    </div>
+    <header>
+      <div class="header-container">
+        <h1 class="heading">
+          <p class="heading__text">ROCK</p>
+          <p class="heading__text">PAPER</p>
+          <p class="heading__text">SCISSORS</p>
+        </h1>
+        <div class="score">
+          <p class="score__heading">SCORE</p>
+          <p class="score__number">12</p>
+        </div>
+      </div>
+    </header>
+    <main></main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://github.com/DawidPiecha">DawidPiecha</a>.
+      </div>
+    </footer>
   </body>
 </html>
